test/conformance/accept/inline_escape.hdoc
hdoc(version="2.0", lang="en");

p { backslash \\ brace-open \{ brace-close \} }
