test/conformance/reject/title_after_content.hdoc
hdoc(version="2.0", lang="en");

p "First content"

title { Late Title }
